[FIX] disabled scrollbar

--- a/vue-app/src/assets/css/general.css
+++ b/vue-app/src/assets/css/general.css
@@ -2,7 +2,6 @@ body{
     font-family: century-gothic, sans-serif;
     background-color: #0b1727;
     color: #c0c0c1;
-    overflow: scroll;
 }
 
 .button{
